# trading-engine

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_FINDINGS_2026-07-06.md  BUILD_PROMPT.md  CLAUDE.md  HOW_IT_WORKS.md  PEER_REVIEW_short_interest_signal.md  README.md  REVIEW_2026-07-05.md  SUGGESTIONS.md  backtest_results_momentum_smallcap.json  backtest_results_orb.json  backtest_results_orb_volconfirm.json  backtest_results_thesis.json  install_services.sh  main.py  main_alpha.py  main_protection.py  pyproject.toml  run_vol_aapl.py  trading-engine-alpha.service  trading-engine-protection.service  trading-engine.service
CC-Session-Logs/: 12-07-2026-22_55-phase2-phase3-memory-loop.md
analyst_layer/: agent_scorer.py  correlation.py  factor_provider.py  finra_short_volume_provider.py  gap_scanner.py  graph.py  ignition_provider.py  kelly.py  kronos_provider.py  lesson_store.py  macro_news_agent.py  market_regime.py  momentum_scanner.py  options_structurer.py  orb_scanner.py  performance.py  prefilter.py  pricing.py  recovery_scanner.py  reflection_agent.py  schemas.py  shadow_signals.py  short_interest_provider.py  swing_scanner.py  thesis_scanner.py  universe.py  vibe_data.py  vol_analytics.py  vol_graph.py  vol_universe.py  vw_bandit.py
backtest/: metrics.py  momentum_backtest.py  orb_backtest.py  portfolio_metrics.py  pullback_5d_backtest.py  pullback_5d_report.md  pullback_5d_results.json  run_momentum_backtest.py  run_momentum_backtest_smallcap.py  run_orb_backtest.py  run_pullback_5d_backtest.py  run_thesis_backtest.py  thesis_backtest.py  universe.py
config/: settings.py
dashboard/: app.py  server.py
data_layer/: akshare_client.py  alpaca_reference_client.py  exceptions.py  finnhub_client.py  finra_shvol_client.py  google_news.py  models.py  occ_symbol.py  openbb_client.py  sentiment_lexicon.py
execution_layer/: alerting.py  alpha_plane.py  broker.py  exit_rules.py  guardrails.py  manual_trigger.py  postmortem_writer.py  protection_plane.py  runtime.py  scheduler.py  state_store.py  tax_compliance.py  wiki_writer.py
scripts/: alpha_bench_custom.py  backfill_strategy_version.py  backtest.py  finra_shvol_shadow_signal_job.py  ignition_shadow_signal_job.py  kronos_shadow_signal_job.py  manage.py  nightly_swarm.py  short_interest_shadow_signal_job.py  vw_warmup.py  (+2 more)
(+68 files in other folders)
