[project]
name = "trading-engine"
version = "0.1.0"
description = "Three-layer autonomous trading engine: OpenBB data layer, multi-agent analyst/consensus layer, Alpaca paper-trading execution layer."
requires-python = ">=3.11"
dependencies = [
    "openbb>=4.3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "anthropic>=0.34.0",
    "alpaca-py>=0.28.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "streamlit>=1.50",
    "plotly>=6.0",
    "pandas>=2.0",
    "requests>=2.31",
    # Kronos-small shadow signal provider (analyst_layer/vendor/kronos, MIT license).
    # IMPORTANT on aarch64: `pip install -e .` alone will resolve the CUDA-bundled
    # torch build (~5GB of unused NVIDIA packages on this Pi). Install torch
    # separately first via the CPU-only index:
    #   pip install torch --index-url https://download.pytorch.org/whl/cpu
    "torch>=2.0",
    "einops==0.8.1",
    "huggingface_hub==0.33.1",
    "safetensors==0.6.2",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
